# policy-processor

./: .env.example  .gitignore  DEMO_SCRIPT_10MIN.md  DSM_AGENT_EXPLANATION.md  FLOW_DIAGRAM.md  IMPROVEMENTS_2025_12_12.md  IMPROVEMENT_PLAN.md  LICENSE  NODE_DIAGRAM.md  QUICKSTART.md  README.md  RESEARCH_SUMMARY.md  clear_redis_locks.py  exploration_output.txt  file_parts_exploration.txt  improvements.docx  install_dependencies.ps1  main_a2a.py  req.txt  requirements.txt
.claude/: settings.local.json
backup_before_langgraph/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  README.md  main_a2a.py  main_streamlit.py  requirements.txt
config/: settings.py
data/: policy_processor.db
document-analysis-system/: QUICKSTART.md  README.md
examples/: 01_simple_agent_server.py  02_streaming_agent_server.py  03_non_streaming_client.py  04_streaming_client.py  05_document_processing_agent.py  06_document_processing_client.py  07_langgraph_agent_server.py  check_skill_fields.py  deep_explore_a2a.py  explore_a2a_structure.py  explore_file_parts.py  explore_types.py  types_exploration.txt
guides/: 06_configuration.md
old system/: MONITOR_AGENTS.bat  START_AGENTS.bat  monitor_agents.py  (+3 more)
old system/agents/decision-making-agent/: .env.example  Dockerfile  README.md  agent.json  pyproject.toml
old system/agents/decision-making-agent/decision_making_agent/: agent.py  agent_executor.py  main.py
old system/agents/decision-making-agent/decision_making_agent/config/: settings.json
old system/agents/decision-making-agent/decision_making_agent/utils/: cost_tracker.py  llm.py  settings.py
(+199 files in other folders)
